--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ n_model/n_quotes_prediction_model/variables/variables.data-00000-of-00001
 n_model/n_quotes_prediction_model/saved_model.pb
 n_model/n_quotes_prediction_model/keras_metadata.pb
 n_model/n_quotes_prediction_model/variables/variables.index
+merde.ipynb
